<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="nirmay.healthcare.niramayhealthcare.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="nirmay.healthcare.niramayhealthcare.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_search"
        android:name="nirmay.healthcare.niramayhealthcare.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_diagnosis"
        android:name="nirmay.healthcare.niramayhealthcare.ui.diagnosis.DiagnosisFragment"
        android:label="@string/menu_diagnosis"
        tools:layout="@layout/fragment_diagnosis" />


    <fragment
        android:id="@+id/nav_facilities"
        android:name="nirmay.healthcare.niramayhealthcare.ui.facilities.FacilitiesFragment"
        android:label="@string/menu_facilities"
        tools:layout="@layout/fragment_facilities" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="nirmay.healthcare.niramayhealthcare.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />
</navigation>